@@ -1,2 +1,10 @@
 exclude jcc/config.py
-
+include jcc/patches/patch.*
+recursive-include jcc *.h
+recursive-include _jcc *.h
+recursive-include java *.java
+include CHANGES
+include DESCRIPTION
+include INSTALL
+include LICENSE
+include NOTICE
